Server/esp_server/build/log/idf_py_stderr_output_15544
fatal: no submodule mapping found in .gitmodules for path 'esp-idf/components/cJSON'
fatal: no submodule mapping found in .gitmodules for path 'esp-idf/components/cJSON'
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_write':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:248:21: error: redefinition of 'response'
  248 |         const char *response = "File received successfully";
      |                     ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:217:21: note: previous definition of 'response' with type 'const char *'
  217 |         const char *response = "Filename received successfully";
      |                     ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:257:13: warning: 'tcp_server_read' defined but not used [-Wunused-function]
  257 | static void tcp_server_read(void *pvParameters) {
      |             ^~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:95:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   95 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   42 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:41:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   41 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
